# image_server

./: .gitignore  CMakeLists.txt  SyncTcpClient.h  SyncTcpServer.h  TcpImageServer.cpp
cpp/: CMakeLists.txt  Common.h  ImgClient.cpp  ImgServer.cpp  SyncTcpClient.h  SyncTcpServer.h  TcpImageClient.cpp  TcpImageServer.cpp
cpp.tcp/: ImgClient.cpp  ImgServer.cpp
cpp/gptchat/: gptclient.cpp  gptserver.cpp
cpp/simplest/: imgclient.cpp  imgserver.cpp
cpp/working/: rest_server.h  web_server.cpp  web_server.h
node.js/network/: package-lock.json
node.js/network/src/: img_client_config.json
node.js/network/src/socket/: main_client.js  main_server.js  server_socket.js
node/network/: package.json
node/network/__test__/example/: sum.test.mjs
node/network/__test__/socket/: get_one_image_cam0.test.mjs
node/network/__test__/udp/: upd.test.js
node/network/src/: img_client_config.json  img_server_config.json
node/network/src/socket/: client_socket.js  client_socket.mjs  main_client.js  server_socket.mjs
node/network/src/udp/: reciever.js  sender.js  upd_util.js  upd_util.mjs
node/network/test/: get_one_image_cam0.test.mjs  test.js
node/network/test/udp/: upd.test.js
vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  image_client.vcxproj  image_client.vcxproj.filters  image_server.sln  image_server.vcxproj  image_server.vcxproj.filters
working/: rest_client_loc.cpp  rest_client_loc.h  rest_server.cpp
